tests/fail/wrong_universe.is
def [*] diagonal
	: |r : repr| @ -> |T : '(* c0 r)| @
	-> '(<T> -> <T> & <T>)
= |_| |_| <|x| (x, x)>;

<diagonal rptr <Box Bool>> (box true)
